--- a/index.html
+++ b/index.html
@@ -46,30 +46,52 @@
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6 px-4 w-full max-w-6xl relative z-10">
+            
             <div class="glass-panel p-4 rounded-xl hover:-translate-y-2 transition duration-300">
-                <div class="h-40 bg-gray-800 rounded-lg mb-4 flex items-center justify-center relative group overflow-hidden">
-                    <span class="text-xs text-gray-500 absolute top-2 right-2">Video Preview</span>
-                    <i class="fas fa-city text-4xl text-gray-600 group-hover:scale-110 transition"></i>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden relative">
+                    <iframe 
+                        class="absolute top-0 left-0 w-full h-full"
+                        src="https://www.youtube.com/embed/ID_VIDEO_PERTAMA" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
-                <h3 class="font-bold text-indigo-400">Cyberpunk City</h3>
-                <p class="text-xs text-gray-400 mt-1">Neon lights, rain, JSON detail tinggi.</p>
+                <h3 class="font-bold text-indigo-400">Judul Video Pertama</h3>
+                <p class="text-xs text-gray-400 mt-1">Dibuat menggunakan RFH Tools.</p>
             </div>
+
             <div class="glass-panel p-4 rounded-xl hover:-translate-y-2 transition duration-300">
-                <div class="h-40 bg-gray-800 rounded-lg mb-4 flex items-center justify-center relative group overflow-hidden">
-                    <span class="text-xs text-gray-500 absolute top-2 right-2">Video Preview</span>
-                    <i class="fas fa-cat text-4xl text-gray-600 group-hover:scale-110 transition"></i>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden relative">
+                    <iframe 
+                        class="absolute top-0 left-0 w-full h-full"
+                        src="https://www.youtube.com/embed/ID_VIDEO_KEDUA" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
-                <h3 class="font-bold text-pink-400">Pixar Style 3D</h3>
-                <p class="text-xs text-gray-400 mt-1">Tekstur halus, ekspresi lucu, pencahayaan soft.</p>
+                <h3 class="font-bold text-pink-400">Judul Video Kedua</h3>
+                <p class="text-xs text-gray-400 mt-1">Prompt gaya animasi 3D.</p>
             </div>
+
             <div class="glass-panel p-4 rounded-xl hover:-translate-y-2 transition duration-300">
-                <div class="h-40 bg-gray-800 rounded-lg mb-4 flex items-center justify-center relative group overflow-hidden">
-                    <span class="text-xs text-gray-500 absolute top-2 right-2">Video Preview</span>
-                    <i class="fas fa-leaf text-4xl text-gray-600 group-hover:scale-110 transition"></i>
+                <div class="w-full h-48 mb-4 rounded-lg overflow-hidden relative">
+                    <iframe 
+                        class="absolute top-0 left-0 w-full h-full"
+                        src="https://www.youtube.com/embed/UmBKgc3C3tk" 
+                        title="YouTube video player" 
+                        frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                        allowfullscreen>
+                    </iframe>
                 </div>
-                <h3 class="font-bold text-green-400">Nature Macro</h3>
-                <p class="text-xs text-gray-400 mt-1">4K Realism, butiran air, cinematic.</p>
+                <h3 class="font-bold text-green-400">Spiderman Ngopi di Pinggir Sungai</h3>
+                <p class="text-xs text-gray-400 mt-1">Video Cinematic Realism.</p>
             </div>
+
         </div>
     </section>
 
