--- a/index.html
+++ b/index.html
@@ -51,30 +51,30 @@
                 <div class="w-full h-48 mb-4 rounded-lg overflow-hidden relative">
                     <iframe 
                         class="absolute top-0 left-0 w-full h-full"
-                        src="https://www.youtube.com/embed/ID_VIDEO_PERTAMA" 
+                        src="https://www.youtube.com/embed/kbgq-uuYiwk" 
                         title="YouTube video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
                     </iframe>
                 </div>
-                <h3 class="font-bold text-indigo-400">Judul Video Pertama</h3>
-                <p class="text-xs text-gray-400 mt-1">Dibuat menggunakan RFH Tools.</p>
+                <h3 class="font-bold text-indigo-400">Nenek Cyberpunk</h3>
+                <p class="text-xs text-gray-400 mt-1">Prompt Gaya Cyberpunk.</p>
             </div>
 
             <div class="glass-panel p-4 rounded-xl hover:-translate-y-2 transition duration-300">
                 <div class="w-full h-48 mb-4 rounded-lg overflow-hidden relative">
                     <iframe 
                         class="absolute top-0 left-0 w-full h-full"
-                        src="https://www.youtube.com/embed/ID_VIDEO_KEDUA" 
+                        src="https://www.youtube.com/embed/n-zisFCT63E" 
                         title="YouTube video player" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
                     </iframe>
                 </div>
-                <h3 class="font-bold text-pink-400">Judul Video Kedua</h3>
-                <p class="text-xs text-gray-400 mt-1">Prompt gaya animasi 3D.</p>
+                <h3 class="font-bold text-pink-400">Pelajar Membaca Buku</h3>
+                <p class="text-xs text-gray-400 mt-1">Prompt Gaya Animasi 3D.</p>
             </div>
 
             <div class="glass-panel p-4 rounded-xl hover:-translate-y-2 transition duration-300">
@@ -89,7 +89,7 @@
                     </iframe>
                 </div>
                 <h3 class="font-bold text-green-400">Spiderman Ngopi di Pinggir Sungai</h3>
-                <p class="text-xs text-gray-400 mt-1">Video Cinematic Realism.</p>
+                <p class="text-xs text-gray-400 mt-1">Prompt Gaya Cinematic Realism.</p>
             </div>
 
         </div>
