--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h1 class="text-5xl md:text-7xl font-extrabold mb-6">Create Infinite <br><span class="gradient-text">Video Realities</span></h1>
             <p class="text-lg text-gray-300 mb-8 leading-relaxed">
                 Selamat datang di RFH Tools. Platform kreatif untuk menerjemahkan imajinasi menjadi instruksi video presisi. 
-                Hasilkan prompt JSON detail untuk AI Video Generator dengan mudah dan cepat.
+                Hasilkan prompt deskripsi video detail untuk AI Video Generator dengan mudah dan cepat.
             </p>
             <a href="#prompt-master" class="inline-flex items-center px-8 py-3 border border-transparent text-base font-medium rounded-full shadow-sm text-white bg-indigo-600 hover:bg-indigo-700 transition transform hover:scale-105">
                 Mulai Generate <i class="fas fa-magic ml-2"></i>
