--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold gradient-text">Prompt Master Engine</h2>
-                <p class="text-gray-400 mt-2">Isi detail parameter di bawah untuk hasil JSON yang sempurna.</p>
+                <p class="text-gray-400 mt-2">Isi detail parameter di bawah untuk hasil deskripsi video yang sempurna.</p>
             </div>
 
             <div class="glass-panel rounded-2xl p-8 shadow-2xl border-t border-indigo-500/30">
@@ -211,14 +211,14 @@
 
                 <div class="mt-8 text-center">
                     <button onclick="generatePrompt()" id="generateBtn" class="w-full md:w-1/2 bg-gradient-to-r from-indigo-600 to-purple-600 hover:from-indigo-700 hover:to-purple-700 text-white font-bold py-4 px-6 rounded-lg shadow-lg transform transition hover:scale-105 flex justify-center items-center mx-auto border border-white/10">
-                        <span id="btnText">GENERATE PROMPT JSON</span>
+                        <span id="btnText">GENERATE PROMPT</span>
                         <i id="btnIcon" class="fas fa-robot ml-2"></i>
                     </button>
                 </div>
 
                 <div class="mt-8">
                     <div class="flex justify-between items-center mb-2">
-                        <label class="label-text text-indigo-300">Hasil JSON Prompt:</label>
+                        <label class="label-text text-indigo-300">Hasil Prompt:</label>
                         <button onclick="copyToClipboard()" class="text-xs bg-indigo-900/50 hover:bg-indigo-800 border border-indigo-500/30 px-3 py-1 rounded text-white transition flex items-center">
                             <i class="fas fa-copy mr-1"></i> Salin Code
                         </button>
